// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FormattedInput matches snapshot on undefined value 1`] = `
<div
  class="formatted-input"
>
  <div
    class="bp6-input-group"
  >
    <input
      class="bp6-input"
      type="text"
    />
  </div>
</div>
`;

exports[`FormattedInput matches snapshot with escaped value 1`] = `
<div
  class="formatted-input"
>
  <div
    class="bp6-input-group"
  >
    <input
      class="bp6-input"
      type="text"
      value="Here are some chars \\t\\r\\n lol"
    />
  </div>
</div>
`;

exports[`FormattedInput matches works with multiline 1`] = `
<div
  class="formatted-input"
>
  <textarea
    class="bp6-input bp6-text-area"
  >
    Here are some chars \\t\\r\\n lol
  </textarea>
</div>
`;
